--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <h1>Michael Tranquillo</h1>
   <p>Welcome to my first Github practice run.</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ <h2>This is my test</h2>
+ <p>This is to test the functions of Github. Test test..</p>
 </body>
  
+<footer>
+ <button>I'm a non functioning button</button>
+ <button>I'm also a non functioning button</button>
 </html>
