--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@
 <footer>
  <button>I'm a non functioning button</button>
  <button>I'm also a non functioning button</button>
+</footer>
+ 
 </html>
